Fix dropdown menu overlap with ending component

--- a/src/Header.css
+++ b/src/Header.css
@@ -8,6 +8,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     height: 10vh;
+    margin-bottom: 4rem;
 }
 
 ul {
