--- a/src/MinesweeperGame.css
+++ b/src/MinesweeperGame.css
@@ -5,7 +5,6 @@
 .game-body {
     /* margin: 1rem; */
     display: flex;
-    gap: 3rem;
     flex-direction: column;
     place-items: center;
     height: 100vh;
